# wikispine

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish-service-image.yml  release-cli.yml  rust-ci.yml
config/: runtime-data.json
crates/builder/: Cargo.toml
crates/builder/src/: ac_compile.rs  cli.rs  download.rs  postprocess.rs  preprocess.rs  tsv.rs  wiki_sql.rs
crates/builder/src/compact_ac/: bytewise.rs  charwise.rs  mod.rs  nfa_builder.rs
crates/builder/src/compact_ac/bytewise/: builder.rs
crates/builder/src/compact_ac/charwise/: mapper.rs
crates/core/: Cargo.toml
crates/core/src/: normalize.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: main.rs
crates/runtime/src/cli/: mod.rs
crates/runtime/src/core/: mod.rs
crates/runtime/src/server/: mod.rs
docker/: Dockerfile
docker/runtime/: Dockerfile
docs/: builder-pipeline.md  runtime-api.md  service-deployment.md  surface-normalization.md
scripts/: build-service-image.sh  install-local.sh  install.sh  package-runtime-data.sh
src/: ac_compile.rs  cli.rs  download.rs  error.rs  main.rs  postprocess.rs  preprocess.rs  qid.rs
src/compact_ac/: build_helper.rs  charwise.rs  serializer.rs
src/compact_ac/bytewise/: iter.rs
src/compact_ac/charwise/: builder.rs  iter.rs
