[package]
name = "wikispine-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Serve and query Wikispine runtime datasets."
repository.workspace = true
publish = false

[[bin]]
name = "wikispine-runtime"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
bytes = "1"
futures-util = "0.3"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
