[package]
name = "wikispine-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Serve and query Wikispine runtime datasets."
repository.workspace = true
publish = false

[[bin]]
name = "wikispine"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
bytes = "1"
futures-util = "0.3"
md-5 = "0.10"
memmap2 = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
wikispine-core = { path = "../core" }
